--- a/Producto2/styles/Dashboard.css
+++ b/Producto2/styles/Dashboard.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url('/Producto2/img/background.png');
+  background-image: url('/img/background.png');
   background-size: cover;
   background-attachment: fixed;
 }
